--- a/templates/Third_page.html
+++ b/templates/Third_page.html
@@ -5,7 +5,7 @@
 <head>
     
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Page3</title>
     <link rel="stylesheet" href="{% static 'styles2.css' %}">
 </head>
 <body>
