--- a/templates/fifth_page.html
+++ b/templates/fifth_page.html
@@ -1,11 +1,35 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <h1>Fifth</h1>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Page5</title>
+    <link rel="stylesheet" href="{% static 'styles4.css' %}">
 </head>
 <body>
-
+    <div class ="overlay"></div>
+    
+    <div class="text">
+        <div class="wrapper">
+            <div id="F" class="letter">F</div>
+            <div class="shadow">F</div>
+        </div>
+        <div class="wrapper">
+            <div id="I" class="letter">I</div>
+            <div class="shadow">I</div>
+        </div>
+        <div class="wrapper">
+            <div id="F" class="letter">F</div>
+            <div class="shadow">F</div>
+        </div>
+        <div class="wrapper">
+            <div id="T" class="letter">T</div>
+            <div class="shadow">T</div>
+        </div>
+        <div class="wrapper">
+            <div id="H" class="letter">H</div>
+            <div class="shadow">H</div>
+        </div>
+    </div>
 </body>
 </html>
