--- a/templates/fourth_page.html
+++ b/templates/fourth_page.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Page4</title>
     <link rel="stylesheet" href="{% static 'styles3.css' %}">
 </head>
 <body>
