--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Second</title>
+    <title>Page2</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
