--- a/templates/six_page.html
+++ b/templates/six_page.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Page6</title>
+    <link rel="stylesheet" href="{% static 'styles5.css' %}">
 </head>
 <body>
-
+    <span>Six</span>
 </body>
 </html>
